--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@
                 Idul khotmi ke 232th dilaksanakan pada tanggal 23, 24, 25 Agustus 2024 di Ponpes Darussalam Jatibarang Brebes Jawa Tengah. Kepada seluruh ikhwan/muhibbin yang akan hadir pada pelaksanaan tersebut dapat menghubungi koordinator sesuai dengan wilayah asal masing masing.
             </p>
             <ul>
-              <li><i class="bx bxl-whatsapp"></i> Pendaftaran tamu dari wilayah jawa timur. Silahkan Hubungi : <br><a href="https://wa.me/087865578787">Ust. Abdul Aziz Damir</a></li>
-              <li><i class="bx bxl-whatsapp"></i> Pendaftaran tamu dari wilayah jawa tengah. Silahkan Hubungi : <br><a href="https://wa.me/082325080014">Ust. Abdul Basith</a></li>
-              <li><i class="bx bxl-whatsapp"></i> Pendaftaran tamu dari wilayah jawa Barat. Silahkan Hubungi : <br><a href="https://wa.me/081329103305">Ust. Agus Ghozi</a></li>
-              <li><i class="bx bxl-whatsapp"></i> Pendaftaran tamu dari wilayah Luar jawa. Silahkan Hubungi : <br><a href="https://wa.me/085842802601">Ust. Rohmat</a></li>
+              <li><i class="bx bxl-whatsapp"></i> Pendaftaran tamu dari wilayah jawa timur. Silahkan Hubungi : <br><a href="https://wa.me/+6287865578787">Ust. Abdul Aziz Damir</a></li>
+              <li><i class="bx bxl-whatsapp"></i> Pendaftaran tamu dari wilayah jawa tengah. Silahkan Hubungi : <br><a href="https://wa.me/+6282325080014">Ust. Abdul Basith</a></li>
+              <li><i class="bx bxl-whatsapp"></i> Pendaftaran tamu dari wilayah jawa Barat. Silahkan Hubungi : <br><a href="https://wa.me/+6281329103305">Ust. Agus Ghozi</a></li>
+              <li><i class="bx bxl-whatsapp"></i> Pendaftaran tamu dari wilayah Luar jawa. Silahkan Hubungi : <br><a href="https://wa.me/+6285842802601">Ust. Rohmat</a></li>
             </ul>
         
             </div>
