--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
           <div class="col-lg-6 pt-4 pt-lg-0">
             <h3>Informasi Penginapan</h3>
             <p>
-                Idul khotmi ke 232th dilaksanakan pada tanggal 23, 24, 25 Agustus 2024 di Ponpes Darussalam Jatibarang Brebes Jawa Tengah. Kepada seluruh ikhwan/muhibbin yang akan hadir pada pelaksanaan tersebut dapat menghubungi koordinator sesuai dengan wilayah asal masing masing.
+                Idul khotmi ke 232th dilaksanakan pada tanggal 30, 31 Agustus - 1 September 2024 di Ponpes Darussalam Jatibarang Brebes Jawa Tengah. Kepada seluruh ikhwan/muhibbin yang akan hadir pada pelaksanaan tersebut dapat menghubungi koordinator sesuai dengan wilayah asal masing masing.
             </p>
             <ul>
               <li><i class="bx bxl-whatsapp"></i> Pendaftaran tamu dari wilayah jawa timur. Silahkan Hubungi : <br><a href="https://wa.me/+6287865578787">Ust. Abdul Aziz Damir</a></li>
