--- a/index.html
+++ b/index.html
@@ -324,13 +324,13 @@
               </div>
             </div>
 
-            <div class="progress">
-              <span class="skill">klampis <i class="val">0%</i></span>
+<!--             <div class="progress">
+              <span class="skill"> <i class="val">0%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
