--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Buaran <i class="val">0%</i></span>
+              <span class="skill">Kertaharja <i class="val">0%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -318,19 +318,19 @@
             </div>
 
             <div class="progress">
-              <span class="skill">klampis <i class="val">0%</i></span>
+              <span class="skill">Janegara <i class="val">0%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
-<!--             <div class="progress">
-              <span class="skill"> <i class="val">0%</i></span>
+            <div class="progress">
+              <span class="skill">Suro Pesarean <i class="val">0%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
-          </div> -->
+          </div>
 
         </div>
 
