--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
               Jatibarang Kidul<br>
               Kabupaten Brebes, 52261<br>
               Jawa Tengah <br><br>
-              <strong>Telpon:</strong> 0852133814000<br>
+              <strong>Telpon:</strong> <a href="https://wa.me/+62852133814000+">0852133814000</a><br>
               <strong>Email:</strong> idulkhotmidarussalam@gmail.com<br>
             </p>
           </div>
