--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-phone"></i>
                   <h4>Telpon:</h4>
-                  <p>08159610197</p>
+                  <p> <a href="https://wa.me/+628159610197">08159610197</a></p>
                 </div>
               </div>
             </div>
@@ -838,7 +838,7 @@
               Jatibarang Kidul<br>
               Kabupaten Brebes, 52261<br>
               Jawa Tengah <br><br>
-              <strong>Telpon:</strong> <a href="https://wa.me/+62852133814000+">0852133814000</a><br>
+              <strong>Telpon:</strong> <a href="https://wa.me/+628159610197">08159610197</a><br>
               <strong>Email:</strong> idulkhotmidarussalam@gmail.com<br>
             </p>
           </div>
