--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
         <div class="section-title">
           <h2>Data Tamu</h2>
-          <!-- <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem</p> -->
+          <p>Data Tamu Yang Sudah Masuk</p>
         </div>
 
         <div class="row">
