--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
           <div class="col-lg-3 col-6">
             <div class="count-box">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="120" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="120" data-purecounter-duration="1" class="purecounter"><a href="#">Klik</a></span>
               <p>Jawa Timur</p>
             </div>
           </div>
