--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
               
               <li class="dropdown"><a href="#"><span>Kertasinduyasa</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                  <li><a href="#">Rw 01</a></li>
-                  <li><a href="#">Rw 02</a></li>
-                  <li><a href="#">Rw 03</a></li>
-                  <li><a href="#">Rw 04</a></li>
-                  <li><a href="#">Rw 05</a></li>
+                  <li><a href="https://docs.google.com/spreadsheets/d/1xuFiICKq9SDWUhH8lTj1C92YNh30vP0LTtkmJxUzOLw/edit?usp=sharing">Rw 01</a></li>
+                  <li><a href="https://docs.google.com/spreadsheets/d/1xuFiICKq9SDWUhH8lTj1C92YNh30vP0LTtkmJxUzOLw/edit?usp=sharing">Rw 02</a></li>
+                  <li><a href="https://docs.google.com/spreadsheets/d/1xuFiICKq9SDWUhH8lTj1C92YNh30vP0LTtkmJxUzOLw/edit?usp=sharing">Rw 03</a></li>
+                  <li><a href="https://docs.google.com/spreadsheets/d/1xuFiICKq9SDWUhH8lTj1C92YNh30vP0LTtkmJxUzOLw/edit?usp=sharing">Rw 04</a></li>
+                  <li><a href="https://docs.google.com/spreadsheets/d/1xuFiICKq9SDWUhH8lTj1C92YNh30vP0LTtkmJxUzOLw/edit?usp=sharing">Rw 05</a></li>
                 </ul>
               </li>
 
