--- a/index.html
+++ b/index.html
@@ -320,8 +320,9 @@
           <div class="col-lg-3 col-6">
             <div class="count-box">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="150" data-purecounter-duration="1" class="purecounter"></span>
               <p>Jawa Tengah</p>
+              <p><a href="https://docs.google.com/spreadsheets/d/1yIozWZWIkwZmySVBicnKTLp8MoickFcU9UO9LkTiRgY/edit?usp=sharing">Lihat</a></p>
             </div>
           </div>
 
