--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             <div class="count-box">
               <i class="bi bi-people"></i>
               <span data-purecounter-start="0" data-purecounter-end="120" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Jawa Timur</p> <br>
+              <p>Jawa Timur</p>
               <p><a href="https://docs.google.com/spreadsheets/d/1SxXJfgPuaRz6DK81WJ4YNoHdUFR1GpdkxTKrohqul1A/edit?usp=sharing">Lihat</a></p>
             </div>
           </div>
