--- a/index.html
+++ b/index.html
@@ -350,6 +350,7 @@
               <i class="bi bi-people"></i>
               <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
               <p>Luar Jawa</p>
+              <p><a href="#">Lihat</a></p>
             </div>
           </div>
 
