tambah script pelacakan

--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
 
 <body>
 
+  <!-- google analytic -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXX-Y"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-7T0K3PDTGY');
+  </script>
+
+<script defer data-domain="idulkhotmi.github.io" src="https://plausible.io/js/script.js"></script>
+
+
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center">
