--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
           <div class="col-lg-3 col-6">
             <div class="count-box">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="150" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="175" data-purecounter-duration="1" class="purecounter"></span>
               <p>Jawa Tengah</p>
               <p><a href="https://docs.google.com/spreadsheets/d/1yIozWZWIkwZmySVBicnKTLp8MoickFcU9UO9LkTiRgY/edit?usp=sharing">Lihat</a></p>
             </div>
@@ -361,9 +361,9 @@
           <div class="col-lg-3 col-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
               <p>Luar Jawa</p>
-              <p><a href="#">Lihat</a></p>
+              <p><a href="https://docs.google.com/spreadsheets/d/1f9wVpLn8WTK1X8r9JtMHRTMC0-fnMSb1WxLpudABKrU/edit?usp=sharing">Lihat</a></p>
             </div>
           </div>
         </div>
