tambah fitur pelayanan kesehatan

--- a/index.html
+++ b/index.html
@@ -181,16 +181,16 @@
           <p>Ini adalah halaman idul khotmi ke 232 tahun yang dilaksanakan di zawiyah at-tijaniyah al firdaus pondok pesantren Darussalam jatibarang brebes jawa tengah. yang dikelola oleh tim it darussalam media center (DMC)</p>
         </div>
 
-        <!-- <div class="row">
+        <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <div class="icon"><i class="bx bi-briefcase"></i></div>
+              <h4><a href="https://forms.gle/GayiyqGyjSmfvCR3A">Info Layanan Kesehatan</a></h4>
+              <p>Klik Lapor dokter sekarang, jika anda mengalamai keluhan sakit, kami siap membantu gratis</p>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+          <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4><a href="">Sed ut perspiciatis</a></h4>
