--- a/index.html
+++ b/index.html
@@ -190,14 +190,15 @@
             </div>
           </div>
 
-          <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Sed ut perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <h4><a href="https://drive.google.com/file/d/1S1YQUO-zbA1wAVZaGyYvWtw2M2i30zxE/view?usp=sharing">Jadwal Kegiatan Idul Khotmi</a></h4>
+              <p>Pelaksanaan idul khotmi insyaallah akan dilaksanakan dari hari jum'at, 30, 31 Agustus s/d 1 September 2024</p>
             </div>
           </div>
 
+<!--
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
