--- a/index.html
+++ b/index.html
@@ -198,15 +198,15 @@
             </div>
           </div>
 
-<!--
+
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Sed ut perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <div class="icon"><i class="bx bi-calendar4-week"></i></div>
+              <h4><a href="">Info Konsumsi</a></h4>
+              <p>Untuk informasi jadwal konsumsi klik untuk melihat tabel, atau hubungi <a href="https://wa.me/+6285826312063">0858-2631-2063 Ibu Hj. Atun</a></p>
             </div>
           </div>
-
+<!--
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
