tambah fitur Donasi ngelink ke wahtsappp

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Kontak</a></li>
+          <li><a class="nav-link scrollto" href="#contact">Donasi & Kontak</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -186,7 +186,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bi-briefcase"></i></div>
               <h4><a href="https://forms.gle/GayiyqGyjSmfvCR3A">Info Layanan Kesehatan</a></h4>
-              <p>Klik Lapor dokter sekarang, jika anda mengalamai keluhan sakit, kami siap membantu gratis</p>
+              <p>Klik Lapor dokter sekarang, jika anda mengalamai keluhan sakit, kami siap membantu <b>gratis</b></p>
             </div>
           </div>
 
@@ -740,7 +740,7 @@
 
         <div class="section-title">
           <h2>Kontak</h2>
-          <p>Jika ingin mengetahui info lebih detail tentang kami segera hubungi mail dibawah</p>
+          <p><b>Jika ingin mengetahui info lebih detail tentang kami ataupun Donasi segera hubungi mail dibawah atau hubungi nomer dibawah ini</b></p>
         </div>
 
         <div class="row mt-5 justify-content-center">
@@ -764,7 +764,7 @@
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-phone"></i>
                   <h4>Telpon:</h4>
-                  <p> <a href="https://wa.me/+628159610197">08159610197</a></p>
+                  <p> <a href="https://wa.me/+6281548841706">081548841706</a> Hj. Muzakky</p>
                 </div>
               </div>
             </div>
@@ -777,7 +777,7 @@
           <div class="col-lg-10">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
-                <div class="col-md-6 form-group">
+                <!-- <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
@@ -790,14 +790,14 @@
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
               </div>
-              <div class="my-3">
+              <div class="my-3"> -->
                 <div class="loading">Loading</div>
-                <div class="error-message"></div>
+                <!-- <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-          </div>
+              </div> -->
+              <div class="text-center"><a><button type="submit">Donasi Sekarang</button></a></div>
+            </form> 
+          </div> 
 
         </div>
 
