--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
 
         <div class="section-title">
           <h2>Kontak</h2>
-          <p><b>Jika ingin mengetahui info lebih detail tentang kami ataupun Donasi segera hubungi mail dibawah atau hubungi nomer dibawah ini</b></p>
+          <p>Untuk Donasi infaq syukur mahabbah dapat dikirim kan melalui Nomer <b>Rekening BRI 0676-0100-7642-535 A.N MUZAKKY MIFTAH</b></p>
         </div>
 
         <div class="row mt-5 justify-content-center">
@@ -764,7 +764,7 @@
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-phone"></i>
                   <h4>Telpon:</h4>
-                  <p> <a href="https://wa.me/+6281548841706">081548841706</a> Hj. Muzakky</p>
+                  <p> <a href="https://wa.me/+6281548841706">081548841706</a> H. Muzakky</p>
                 </div>
               </div>
             </div>
