--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-phone"></i>
                   <h4>Telpon:</h4>
-                  <p> <a href="https://wa.me/+6281548841706">081548841706</a> H. Muzakky</p>
+                  <p> <a href="https://wa.me/+6281548841706">081548841706</a> H. Muzakky Miftah</p>
                 </div>
               </div>
             </div>
