--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
 
         <div class="section-title">
           <h2>Kontak</h2>
-          <p>Untuk Donasi infaq syukur mahabbah dapat dikirim kan melalui Nomer <b>Rekening BRI 0676-0100-7642-535 A.N MUZAKKY MIFTAH</b></p>
+          <p>Untuk Donasi INFAK SYUKUR MAHABBAh dapat dikirim melalui Nomer Rekening :<br> <b>BRI 0676-0100-7642-535 A.N MUZAKKY MIFTAH</b></p>
         </div>
 
         <div class="row mt-5 justify-content-center">
@@ -752,7 +752,7 @@
                 <div class="col-lg-4 info">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Lokasi:</h4>
-                  <p>Ponpes Darussalam <br>Jatibarang Kidul<br>Kab. Brebes 52261</p>
+                  <p>Kantor Sekretariat Panitia Idul Khotmi<br>Jatibarang Kidul<br>Kab. Brebes 52261</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
@@ -764,7 +764,7 @@
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-phone"></i>
                   <h4>Telpon:</h4>
-                  <p> <a href="https://wa.me/+6281548841706">081548841706</a> H. Muzakky Miftah</p>
+                  <p>Nomor Konfirmasi Donasi <a href="https://wa.me/+6281548841706">081548841706</a> H. Muzakky Miftah</p>
                 </div>
               </div>
             </div>
