--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
 
         <div class="section-title">
           <h2>Kontak</h2>
-          <p>Untuk Donasi INFAK SYUKUR MAHABBAH dapat dikirim melalui Nomer Rekening :<br> <b>BRI 0676-0100-7642-535 A.N MUZAKKY MIFTAH</b></p>
+          <p>Untuk Donasi INFAQ SYUKUR MAHABBAH dapat dikirim melalui Nomer Rekening :<br> <b>BRI 0676-0100-7642-535 A.N MUZAKKY MIFTAH</b></p>
         </div>
 
         <div class="row mt-5 justify-content-center">
