--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <li><a class="nav-link scrollto" href="#services">Data Tamu</a></li>
           <li><a class="nav-link scrollto " href="https://drive.google.com/file/d/1YKoh9-zh1J6mEXlPYC90_VKvUlYLMKn_/view?usp=sharing">Kepanitiaan</a></li>
           <li><a class="nav-link scrollto" href="#testimonials">Cakrawala Iman</a></li>
-          <li class="dropdown"><a href="#"><span>Info Penginapan</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Tempat Penginapan</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <!-- <li><a href="#">Jatibarang lor</a></li> -->
       
