--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Cakrawala Iman</h2>
+          <h2>Maqolah</h2>
           <p>Siraman qolbu Abuya</p>
         </div>
 
