--- a/index.html
+++ b/index.html
@@ -310,6 +310,14 @@
             </div>
           </div>
 
+          <div class="progress">
+            <span class="skill">Pagerbarang <i class="val">0%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+        </div>
+
         </div>
 
       </div>
