--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </ul>
               </li>
               
-              <li class="dropdown"><a href="#"><span>Suro Pesarean</span> <i class="bi bi-chevron-right"></i></a>
+              <li class="dropdown"><a href="#"><span>Pesarean</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li><a href="https://docs.google.com/spreadsheets/d/1ZJA-bHGOgosAb10qlGn-4Dkp52HMqOtoZ_5LHfU-Niw/edit?usp=sharing">Rw 01</a></li>
                   <li><a href="https://docs.google.com/spreadsheets/d/1ZJA-bHGOgosAb10qlGn-4Dkp52HMqOtoZ_5LHfU-Niw/edit?usp=sharing">Rw 02</a></li>
