--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             <ul>
               <li><i class="bx bxl-whatsapp"></i> Pendaftaran tamu dari wilayah jawa timur. Silahkan Hubungi : <br><a href="https://wa.me/+6282311039394">Ust. Abdul Aziz Damir</a></li>
               <li><i class="bx bxl-whatsapp"></i> Pendaftaran tamu dari wilayah jawa tengah. Silahkan Hubungi : <br><a href="https://wa.me/+6282311039730">Ust. Abdul Basith</a></li>
-              <li><i class="bx bxl-whatsapp"></i> Pendaftaran tamu dari wilayah jawa Barat. Silahkan Hubungi : <br><a href="https://wa.me/+6281329103305">Ust. Ghozi </a></li>
+              <li><i class="bx bxl-whatsapp"></i> Pendaftaran tamu dari wilayah jawa Barat. Silahkan Hubungi : <br><a href="https://wa.me/+628159610197">M. Arinal haq </a></li>
               <li><i class="bx bxl-whatsapp"></i> Pendaftaran tamu dari wilayah Luar jawa. Silahkan Hubungi : <br><a href="https://wa.me/+6285842802601">Ust. Rohmat</a></li>
               <!-- <li><i class="bx bxl-whatsapp"></i> Pendaftaran rombongan khusus akhwat. Silahkan Hubungi : <br><a href="https://wa.me/+6282311039732">Aminah</a></li> -->
             </ul>
