--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 <body>
 
   <!-- google analytic -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXX-Y"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXX-Y"></script>
   <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-7T0K3PDTGY');
-  </script>
+  </script> -->
 
 <script defer data-domain="idulkhotmi.github.io" src="https://plausible.io/js/script.js"></script>
 
