tambahkan fitur google console

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="google-site-verification" content="8Mix0_JwilghZ9Gxrl81beoP1KQrcpIoP1-g414sFk8">
 
   <title>Idul Khotmi Jatibarang - 2024 </title>
   <meta content="" name="description">
