tambah fitur data tamu yang dki

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
               <li><i class="bx bxl-whatsapp"></i> Pendaftaran tamu dari wilayah jawa tengah. Silahkan Hubungi : <br><a href="https://wa.me/+6282311039730">Ust. Abdul Basith</a></li>
               <li><i class="bx bxl-whatsapp"></i> Pendaftaran tamu dari wilayah jawa Barat. Silahkan Hubungi : <br><a href="https://wa.me/+628159610197">M. Arinal haq </a></li>
               <li><i class="bx bxl-whatsapp"></i> Pendaftaran tamu dari wilayah Luar jawa. Silahkan Hubungi : <br><a href="https://wa.me/+6285842802601">Ust. Rohmat</a></li>
-              <li><i class="bx bxl-whatsapp"></i> Pendaftaran rombongan khusus akhwat. Silahkan Hubungi : <br><a href="https://wa.me/+6282138536037">Ibu Aminah</a></li> 
+              <li><i class="bx bxl-whatsapp"></i> Pendaftaran tamu dari wilayah DKI dan rombongan khusus akhwat. Silahkan Hubungi : <br><a href="https://wa.me/+6282138536037">Ibu Aminah</a></li> 
             </ul>
         
             </div>
@@ -379,6 +379,16 @@
             </div>
           </div>
         </div>
+
+        <div class="col-lg-3 col-6 mt-5 mt-lg-0">
+          <div class="count-box">
+            <i class="bi bi-people"></i>
+            <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
+            <p>DKI</p>
+            <p><a href="https://docs.google.com/spreadsheets/d/1ZUj18zmUYJw8uTZpjZt_c40gX-eabEkRQU33oPe1Nzk/edit?usp=sharing">Lihat</a></p>
+          </div>
+        </div>
+      </div>
 
       </div>
     </section><!-- End Counts Section -->
