--- a/index.html
+++ b/index.html
@@ -354,6 +354,16 @@
           <div class="col-lg-3 col-6">
             <div class="count-box">
               <i class="bi bi-people"></i>
+              <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
+              <p>DKI</p>
+              <p><a href="https://docs.google.com/spreadsheets/d/1ZUj18zmUYJw8uTZpjZt_c40gX-eabEkRQU33oPe1Nzk/edit?usp=sharing">Lihat</a></p>
+            </div>
+          </div>
+  
+
+          <div class="col-lg-3 col-6">
+            <div class="count-box">
+              <i class="bi bi-people"></i>
               <span data-purecounter-start="0" data-purecounter-end="324" data-purecounter-duration="1" class="purecounter"></span>
               <p>Jawa Timur</p>
               <p><a href="https://docs.google.com/spreadsheets/d/1SxXJfgPuaRz6DK81WJ4YNoHdUFR1GpdkxTKrohqul1A/edit?usp=sharing">Lihat</a></p>
@@ -380,16 +390,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-6 mt-5 mt-lg-0">
-          <div class="count-box">
-            <i class="bi bi-people"></i>
-            <span data-purecounter-start="0" data-purecounter-end="473" data-purecounter-duration="1" class="purecounter"></span>
-            <p>DKI</p>
-            <p><a href="https://docs.google.com/spreadsheets/d/1ZUj18zmUYJw8uTZpjZt_c40gX-eabEkRQU33oPe1Nzk/edit?usp=sharing">Lihat</a></p>
-          </div>
-        </div>
-      </div>
-
+        
       </div>
     </section><!-- End Counts Section -->
 
